removed native image, as we could not get it working within the time we planned.